# music-manager

./: .gitignore  CMakeLists.txt  CMakeSettings.json  CppProperties.json  README.md
.cmake/: builduws.bat  libuv.cmake  libuv_install.cmake  openssl.cmake  spdlog.cmake  spdlog_install.cmake  uwebsockets.cmake  win32.cmake  zlib.cmake
.cmake/linux/: openssl.cmake
.cmake/macos/: libuv.cmake  libuv_install.cmake  openssl.cmake
.cmake/windows/: libuv.cmake  openssl.cmake
Core/: CMakeLists.txt
Core/src/: MusicManager.cpp  SettingsManager.cpp  SettingsManager.h  SettingsManager_win.cpp  demo.cpp
Core/test/: TestSettingsManager.cpp
